# Archie

./: --output  .gitattributes  .gitignore  CONTEXT.md  HANDOFF.md  LICENSE  README.md  anti-pattern-report.txt  archie.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  start.cmd  start.command  start.sh  tsconfig.base.json
.claude/: .skill-invocation-log  SUGGESTED_SKILLS.md
.interface-design/: system.md
.mulch/: mulch.config.yaml
.seeds/: config.yaml  issues.jsonl
.understand-anything/: .understandignore  domain-graph.json  fingerprints.json  knowledge-graph.json  meta.json
Prior Art/: 00-INDEX.md  01-deep-zoom-viewer.md  02-annotation-tools.md  03-annotation-data-model.md  04-multimedia-av.md  05-multi-object-collections.md  06-authoring-cms.md  07-published-read-ui.md  08-linkable-navigable.md  09-web-publishable-serverless.md  10-state-mutation-patterns.md  11-20-NEW-AXES.md  11-search-discovery.md  12-accessibility.md  13-i18n-localization.md  14-import-interop.md  15-provenance-citation.md  16-performance-ux.md  17-tile-generation.md  18-embedding-ecosystem.md  19-ai-authoring.md  20-security-sanitization.md  _COVERAGE.md  _DISPATCH-CONTEXT.md  _FRAMING.md  _GAP-ANSWERS.md  _GAPS.md  _PAPADAM.md
design/: design.md  sweat-sessions.html
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/flatpak/: digital.compost.archie.desktop  digital.compost.archie.metainfo.xml  digital.compost.archie.yml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+2097 files in other folders)
