[package]
name = "archie"
version = "1.0.0"
description = "Archie Studio — desktop shell"
authors = ["Archie"]
edition = "2021"
license = "GPL-3.0-only"

# The Rust crate that hosts the webview. Logic-light by design: all app behaviour lives in the
# Studio web bundle; Rust only registers the fs + dialog plugins the TauriFsBridge calls into.

[lib]
name = "archie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
